# ocsai-lite

./: .gitignore  README.md  app.py  aut_responses.csv  ocsai_lite.py  ocsai_lite_results.csv  pyproject.toml  render.yaml  requirements.txt  run_ocsai_demo.py  web_ocsai_lite_results.csv
static/: style.css
templates/: index.html
